--- a/config/env.example
+++ b/config/env.example
@@ -1,10 +1,10 @@
-NEXT_PUBLIC_APP_NAME=Job Application Copilot
+NEXT_PUBLIC_APP_NAME=LearnWise AI
 NEXTAUTH_SECRET=changeme-in-prod
-MONGODB_URI=mongodb://localhost:27017/job_app_copilot
+MONGODB_URI=mongodb://localhost:27017/learnwise_ai
 JWT_SECRET=replace-with-strong-secret
 JWT_EXPIRES_IN=7d
 REDIS_URL=redis://localhost:6379
-OPENAI_API_KEY=
-PLAYWRIGHT_HEADLESS=true
-PLAYWRIGHT_CHROMIUM_PATH=
+OPENAI_API_KEY=your-openai-api-key-here
+LANGCHAIN_API_KEY=your-langchain-api-key-here
+LANGCHAIN_TRACING_V2=true
 
